@@ -759,6 +759,14 @@ LspNotify			See |LspNotify|
 LspProgress			See |LspProgress|
 LspRequest			See |LspRequest|
 LspTokenUpdate			See |LspTokenUpdate|
+							*MacroEnter*
+MacroEnter			When a macro starts replaying.
+				The pattern is the current file name, and
+				|reg_executing()| is the replayed register.
+							*MacroLeave*
+MacroLeave			When a macro stops replaying.
+				The pattern is the current file name, and
+				|reg_executing()| is the replayed register.
 							*MenuPopup*
 MenuPopup			Just before showing the popup menu (under the
 				right mouse button).  Useful for adjusting the
