@@ -160,6 +160,8 @@ error('Cannot require a meta file')
 --- |'LspProgress'
 --- |'LspRequest'
 --- |'LspTokenUpdate'
+--- |'MacroEnter'
+--- |'MacroLeave'
 --- |'MenuPopup'
 --- |'ModeChanged'
 --- |'OptionSet'
