@@ -719,6 +719,7 @@ int do_execreg(int regname, int colon, int addcr, int silent)
       }
     }
     reg_executing = regname == 0 ? '"' : regname;  // disable the 'q' command
+    apply_autocmds(EVENT_MACROENTER, NULL, NULL, false, curbuf);
     pending_end_reg_executing = false;
   }
   return retval;
